# django-user-verification

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  files.txt  requirements-test.txt  runtests.py  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: test_backends.py  test_generators.py  test_models.py  test_serializers.py  test_services.py  test_views.py
verification/: __init__.py  generators.py  serializers.py  services.py  urls.py  views.py
verification/backends/: __init__.py  base.py  email.py  twilio.py
verification/templates/verification/: email.html  email.txt  redirector.html
verification/tests/: test_services.py  test_views.py
