[flake8]
ignore = E402
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/*,docs,env, *.pyc
filename = verification/*

[metadata]
description-file = README.md

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:verification/__init__.py]

[wheel]
universal = 1
